--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     ]
   },
   "dependencies": {
-    "vue": "^1.0.0"
+    "vue": "^1.0.0",
+    "vue-resource": "^0.7.2"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.6",
